// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts style 1`] = `
<nav
  className="current-index"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <button
    onClick={[Function]}
  >
    11
    /
    20
  </button>
</nav>
`;

exports[`renders 1`] = `
<nav
  className="current-index"
>
  <button
    onClick={[Function]}
  >
    1
    /
    20
  </button>
</nav>
`;
